--- a/app.properties
+++ b/app.properties
@@ -9,8 +9,8 @@ team.project = 'Phonie'
 lead.email = 'alabilekanemmanuel@gmail.com'
 lead.name = 'Alabi Olalekan'
 
-# AltSchool name and email of the team members
+# AltSchool name and email of the team memberships 
 # names and emails are separated by | character and must follow the same sequence
 # e.g email-1 (the first email) should be the email for the person whose name comes first in the list of names
-members.emails = 'ieghonghon@gmail.com | email-2 | email-3'
-members.names = 'Idemudia Anita | Lastname Firstname | Lastname Firstname'
+members.emails = 'ieghonghon@gmail.com | 'sangobiyitemiloluwa@gmail.com' | email-3'
+members.names = 'Idemudia Anita | 'Sangobiyi Temiloluwa' | Lastname Firstname'
